# disc-you

./: .env.example  .gitignore  Procfile  README.md  SAAS_DEPLOYMENT_GUIDE.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: config.py  dynamic_prompt.py  emotion_analyzer.py  emotional_safety.py  llm_service.py  main.py  models.py  simple_main.py  stripe_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  EmotionIndicator.tsx  MessageBubble.tsx  PricingPlans.tsx
frontend/src/hooks/: useChatService.ts
frontend/src/pages/: PaymentSuccess.tsx
frontend/src/store/: conversationStore.ts
